# iron-carrier

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.src  LICENSE  README.md  docker-compose.yml  justfile  makefile  rust-toolchain.toml
.github/workflows/: rust.yml
iron-carrier/: Cargo.toml
iron-carrier-macros/: Cargo.toml
iron-carrier-macros/src/: lib.rs
iron-carrier/migrations/: 20230130231054_log_entry.sql
iron-carrier/src/: constants.rs  context.rs  hash_helper.rs  hash_type_id.rs  leak.rs  lib.rs  message_types.rs  network_events.rs  relative_path.rs  state_machine.rs  validation.rs
iron-carrier/src/config/: encryption.rs  mod.rs  path_config.rs
iron-carrier/src/file_transfer/: block_index.rs  events.rs  mod.rs  receiver.rs  sender.rs  transfer.rs
iron-carrier/src/file_transfer/receiving/: mod.rs  receive_blocks.rs  reply_transfer_type.rs
iron-carrier/src/file_transfer/sending/: mod.rs  query_required_blocks.rs  transfer_blocks.rs
iron-carrier/src/network/: connection_handler.rs  connection_storage.rs  mod.rs  rpc.rs  service_discovery.rs
iron-carrier/src/network/connection/: mod.rs  read_half.rs  write_half.rs
iron-carrier/src/network/rpc/: call.rs  deadline.rs  group_call.rs  message_waiting_reply.rs  network_event_decoder.rs  network_message.rs  rpc_handler.rs  rpc_message.rs  rpc_reply.rs  subscriber.rs  subscription.rs
iron-carrier/src/states/: connect_all_peers.rs  consensus.rs  daemon.rs  discover_peers.rs  sync.rs
iron-carrier/src/states/sync/: action_dispatcher.rs  actions.rs  events.rs  fetch_storages.rs  files_matcher.rs  follower.rs  leader.rs  set_sync_role.rs
iron-carrier/src/storage/: file_info.rs  file_operations.rs  file_watcher.rs  mod.rs
iron-carrier/src/stream/: fold_timeout.rs
iron-carrier/src/transaction_log/: entry_status.rs  entry_type.rs  log_entry.rs  migrate.rs  mod.rs  sync_entry.rs  sync_status.rs
iron-carrier/tests/: common.rs  full_sync.rs  full_sync_pre_deleted.rs  partial_sync.rs  truncate.rs
migrations/: 20230130231054_log_entry.sql
samples/: .r-syncignore  config_peer_a.toml  config_peer_b.toml  config_peer_c.toml  sample_config.toml  sample_file_a  sample_file_b
samples/peer_a/: sample_file_b
samples/peer_b/: sample_file_b
src/: config.rs  constants.rs  contants.rs  crypto.rs  debouncer.rs  deletion_tracker.rs  fs.rs  hash_helper.rs  ignored_files.rs  lib.rs  main.rs  negotiator.rs  network_events.rs  node_id.rs  relative_path.rs  state_machine.rs  states.rs  storage_hash_cache.rs  storage_state.rs  sync.rs  sync_options.rs  time.rs  transaction_log.rs  validation.rs
src/config/: mod.rs  path_config.rs
src/conn/: commands.rs  connection_manager.rs  dispatcher.rs  mod.rs  peer_connection.rs
src/connection/: connection_handler.rs  mod.rs  peer_connection.rs  service_discovery.rs
src/events/: command_handler.rs  commands.rs  dispatcher.rs  mod.rs
src/file_transfer/: block_index.rs  events.rs  file_receiver.rs  file_sender.rs  file_transfer_event.rs  mod.rs  query_required_blocks.rs  query_transfer_type.rs  receive_blocks.rs  reply_required_blocks.rs  reply_transfer_type.rs  transfer.rs  transfer_blocks.rs
src/file_transfer/receiving/: mod.rs  receive_blocks.rs  reply_required_blocks.rs
src/file_transfer/sending/: mod.rs  query_required_blocks.rs  query_transfer_type.rs  transfer_blocks.rs
src/network/: connection.rs  connection_handler.rs  connection_storage.rs  crypto_stream.rs  mod.rs  network_event_decoder.rs  peer.rs  rpc.rs  server.rs  service_discovery.rs  stream.rs
src/network/connection/: identified.rs  mod.rs  read_half.rs  write_half.rs
src/network/crypto_stream/: mod.rs  read_half.rs  write_half.rs
src/network/rpc/: call.rs  group_call.rs  network_message.rs  rpc_handler.rs  (+2 more)
src/states/: connect_all_peers.rs  consensus.rs  daemon.rs  discover_peers.rs  full_sync.rs  full_sync_follower.rs  full_sync_leader.rs  mod.rs  sync.rs  sync_follower.rs  sync_leader.rs
src/storage/: file_info.rs  file_operations.rs  file_watcher.rs  mod.rs
src/stream/: buffered_stream.rs  mod.rs
src/sync/: connected_peers.rs  connection_manager.rs  file_events_buffer.rs  file_transfer_man.rs  file_watcher.rs  file_watcher_event_blocker.rs  mod.rs  synchronization_session.rs  synchronizer.rs
src/transaction_log/: entry_status.rs  log_entry.rs  mod.rs
system.d/: iron-carrier.service
tests/: common.rs  folder_operations.rs  full_sync.rs  full_sync_pre_deleted.rs  iron_carrier_tests.rs  partial_sync.rs  truncate.rs
tests/configs/: config.one.toml  config.two.toml
(+13 files in other folders)
