[package]
name = "iron-carrier"
version = "0.2.0"
authors = ["Ilson Roberto Balliego Junior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1.3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
filetime = "0.2"
bytes = "1.0.1"
notify = "^4.0.12"
log = "^0.4.11"
stderrlog = "0.5.0"
clap = "2.33.3"
thiserror = "^1.0.0"
simple-mdns = "^0.3"
if-addrs = "0.6.5"
message-io = { version = "0.14", default-features = false, features = [
  "tcp",
  "udp",
] }
rand = "^0.8"
machine-uid = "^0.2"
dirs = "^3.0"
globset = "^0.3"
crc32fast = "1.3.2"
