[package]
name = "iron-carrier"
version = "0.2.0"
authors = ["Ilson Roberto Balliego Junior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.5.6"
filetime = "0.2"
bytes = "1.0.1"
notify = "^4.0.12"
log = "^0.4.11"
stderrlog = "0.5.0"
clap = "2.33.3"
thiserror = "^1.0.0"
simple-mdns = { version = "^0.4", features = ["async-tokio", "sync"] }
if-addrs = "0.6.5"
message-io = { version = "0.14", default-features = false, features = [
  "tcp",
  "udp",
] }
rand = "^0.8"
machine-uid = "^0.2"
dirs = "^3.0"
globset = "^0.3"
crc = "2.1.0"
serde_with = "2.1.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
async-trait = "0.1.60"
tokio-util = { version = "0.7.4", features = ["codec"] }
