[package]
name = "iron-carrier"
version = "0.3.0"
authors = ["Ilson Roberto Balliego Junior"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "^1.3.3"
bytes = "1.0.1"
chrono = { version = "0.4.23", default-features = false }
clap = { version = "4.1", features = ["derive"] }
crc = "^3.0"
cron = "0.12.0"
dirs = "^5.0"
filetime = "0.2"
globset = "^0.4"
if-addrs = "^0.10"
log = "^0.4.11"
machine-uid = "^0.5"
notify = { version = "^6.1", default-features = false, features = [
    "macos_kqueue",
] }
pin-project-lite = "0.2.0"
rand = "^0.8"
rusqlite = { version = "^0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "^3.3"
simple-mdns = { version = "^0.6", features = ["async-tokio"] }
stderrlog = "0.5.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
toml = "^0.8"
iron-carrier-macros = { path = "../iron-carrier-macros" }
num-traits = "0.2"
num-derive = "0.4"

async-encrypted-stream = { version = "0.1" }
chacha20poly1305 = { version = "0.10", features = ["stream"] }
pbkdf2 = "0.12.1"
sha2 = "0.10.6"
x25519-dalek = "2.0.0"
rand_core = "0.6.4"
